repair overflow width

--- a/python_lib_bz/ui_module/profile_m.less
+++ b/python_lib_bz/ui_module/profile_m.less
@@ -105,3 +105,10 @@ input[type="text"]:disabled{
         text-align: center;
     }
 }
+.profile-ctrl{
+    position: relative;
+    button{
+        position: absolute;
+        right: 0px;
+    }
+}
